lintian (2.4.4) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - build-depends-on-specific-java-doc-package
      - depends-on-specific-java-doc-package
      - unneeded-build-dep-on-quilt
      - description-synopsis-starts-with-article

  * checks/*:
    + [NT] Use the new pre-sorted file {index,info} when iterating over files.
  * checks/binaries:
    + [RA] Exclude kfreebsd-kernel-di-{amd64,i386} from the
      embedded-zlib check since it's in the kernel.  (Closes: #593397)
    + [RG] Add swipl to the list of known interpreters.  (Closes: #591316)
  * checks/cruft{,.desc}:
    + [NT] Extended the diff-contains-substvars check to also catch files
      prefixed with a package name.
  * checks/debhelper:
    + [NT] Fix dependency check for dh_nativejava, default-jdk has never
      provided dh_nativejava.  (Closes: #606506)
  * checks/debian-source-dir:
    + [NT] Added missing import of "Util" perl module.  Thanks to David
      Bremner for the patch.
  * checks/description{,.desc}:
    + [NT] Add a check for synopsis starting with articles.  Thanks to
      Nelson A. de Oliveira for the patch.  (Closes: #603053)
  * checks/fields{,.desc}:
    + [NT] Added check for packages (build) depending on openjdk-X-doc or
      classpath-doc instead of the default-jdk-doc metapackage.
      (Closes: #593837)
    + [NT] Fixed spelling of metapackage in tag descriptions.
  * checks/files{,.desc}:
    + [NT] Fixed false-positive extra-license-file for license.ui files.
      Thanks to Jeremy Sanders for the report.  (Closes: #595941)
    + [NT] Added hurd-udeb to the list of packages allowed to ship
      unusual top-level directories.  Thanks to Samual Thibault for
      the patch.  (Closes: #591331)
    + [NT] Fixed spelling of metapackage in empty-binary-package tag
      description.  (Closes: #591300)
  * checks/menu-format.desc:
    + [CW] Fix several typos.
  * checks/menus.desc: