@@ -5,16 +5,30 @@ Maintainer: {$author}
 Standards-Version: {$standards_version}
 Build-Depends: debhelper (>= 7.0.50~), openjdk-6-doc
 
-Package: lib{$srcpkg}-java-doc
-Architecture: {$architecture}
-Section: doc
-Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
-Recommends: openjdk-6-doc
-# Negative testing as well, this should not be triggered.
-Replaces: openjdk-6-doc
+Package: lib{$srcpkg}-java
+Architecture: all
+Depends: $\{misc:Depends\},
+         default-jre-headless | java-runtime-headless |
+         java2-runtime-headless | kaffe | gcj-jdk |
+         openjdk-6-jre | gcj-4.5-jre
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
  things.  It should not be installed like a regular package.  It may
  be an empty package.
+
+Package: lib{$srcpkg}-java-doc
+Architecture: all
+Section: doc
+Depends: $\{misc:Depends\}
+Recommends: openjdk-6-doc
+# Negative testing as well, this should not be triggered.
+Replaces: openjdk-6-doc
+Description: {$description} - API
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
+ .
+ Doc package.
 
