@@ -5,3 +5,4 @@ Description: General tests for java package (build) dependencies
 Test-For:
  build-depends-on-specific-java-doc-package
  depends-on-specific-java-doc-package
+ needless-dependency-on-jre
