@@ -1,2 +1,3 @@
 W: fields-java source: build-depends-on-specific-java-doc-package openjdk-6-doc
 W: libfields-java-java-doc: depends-on-specific-java-doc-package recommends
+W: libfields-java-java: needless-dependency-on-jre
